<resources>
    <string name="app_name">Exercise 1</string>
    <string name="newtask_savetask">Save task</string>
    <string name="no_tasks_to_show">No tasks to show</string>
    <string name="_1">1</string>
    <string name="enter_task_importance">Enter task importance:</string>
    <string name="osc_task">Do OSC homework, all of the exercises</string>
    <string name="summary">Enter task summary:</string>
    <string name="finish_homework">Finish homework</string>
    <string name="task_title">Enter task title:</string>
</resources>
