<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/textview_newtask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tvTextSize"
        android:text="@string/task_title"/>
    <EditText
        android:id="@+id/edittext_newtask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_title"
        android:textColor="#FFF753"
        android:textColorHint="#FFF"
        android:background="#000000"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/finish_homework"/>
    <TextView
        android:id="@+id/textview_newtask_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_title"
        android:textSize="@dimen/tvTextSize"
        android:text="@string/summary"/>
    <EditText
        android:id="@+id/edittext_newtask_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_summary"
        android:textColor="#FFF753"
        android:textColorHint="#fff"
        android:background="#000000"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/osc_task"/>
    <TextView
        android:id="@+id/textview_newtask_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_summary"
        android:textSize="@dimen/tvTextSize"
        android:text="@string/enter_task_importance"/>
    <EditText
        android:id="@+id/edittext_newtask_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_importance"
        android:textColor="#FFF753"
        android:textColorHint="#fff"
        android:background="#000000"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/_1"/>
    <Button
        android:id="@+id/button_newtask_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_importance"
        android:layout_centerHorizontal="true"
        android:text="@string/newtask_savetask"
        android:textAllCaps="false"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_below="@id/button_newtask_save">
        <TextView
            android:id="@+id/textview_newtask_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_tasks_to_show"/>
    </ScrollView>
</RelativeLayout>